--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,3 +12,9 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.logo {
+  background: url('../images/logo.png') no-repeat;
+  height: 100px;
+  width: 200px;
+}
